# staticvec

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  appveyor.yml  rustfmt.toml
.cargo/: config
benches/: bench.rs
benchmark/: arrayvec_arraystring_suite.rs  arrayvec_extend_suite.rs  benchmark.rs  clone_suite.rs  comparison_suite.rs  heap_suite.rs  push_pop_suite.rs  smallvec_full_suite.rs
ci/: run_linux_and_mac.sh  run_miri.sh  run_windows.bat  run_windows.ps1  set_windows_nightly.bat
demo/: demo.rs  main.rs  main_demo.rs  serde_support_demo.rs  string_demo.rs
examples/: bench.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ops.rs
src/: errors.rs  iterators.rs  lib.rs  macro_constructor.rs  macros.rs  trait_impls.rs  utils.rs
src/binaryheap/: mod.rs
src/heap/: heap_helpers.rs  heap_iterators.rs  heap_trait_impls.rs  mod.rs
src/string/: drain.rs  error.rs  mod.rs  string_errors.rs  string_trait_impls.rs  string_utils.rs  trait_impls.rs  utils.rs
test/: string_parity.rs  test.rs  test_staticheap.rs  test_staticstring.rs  test_staticvec.rs
