[package]
name = "staticvec"
description = "Implements a fixed-capacity stack-allocated Vec alternative backed by an array, using const generics."
repository = "https://github.com/slightlyoutofphase/staticvec"
documentation = "https://docs.rs/staticvec/"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.4.6"
authors = ["SlightlyOutOfPhase <slightlyoutofphase@gmail.com>"]
keywords = ["vec", "array", "no_std", "vector", "stack"]
categories = ["data-structures", "no-std"]
edition = "2018"
include = ["Cargo.toml", "rustfmt.toml", "src/**/*.rs", "demo/**/*.rs", "benchmark/**/*.rs", "test/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
doctest = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.test]
incremental = false

[[test]]
name = "test"
path = "test/test.rs"

[[bench]]
name = "smallvec_full_suite"
path = "benchmark/smallvec_full_suite.rs"

[[bench]]
name = "arrayvec_extend_suite"
path = "benchmark/arrayvec_extend_suite.rs"

[[example]]
name = "main_demo"
path = "demo/main_demo.rs"

[[example]]
name = "serde_support_demo"
path = "demo/serde_support_demo.rs"
required-features = ["serde_support", "serde_json_support"]

[features]
std = []
default = ["std"]
serde_support = ["serde"]
serde_json_support = ["serde_json"]

[dev-dependencies]
# This is here so we can compare against it in one of the benchmarks.
arrayvec = "0.5.1"

[dependencies]
serde = { optional = true, version = "1.0", features = ["derive"] }
serde_json = { optional = true, version = "1.0" }
